--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aula2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev": "npx ts-node-dev --respawn index.ts",
     "vercel-build": "npx prisma migrate deploy",
@@ -23,15 +23,11 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.2",
-    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
     "zod": "^3.23.8"
   }
